--- a/EJERCICIO 1/Ejercicio 1.html
+++ b/EJERCICIO 1/Ejercicio 1.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-      
+    <img src="" alt="Imagen de ejemplo" />
+    <br />
+    <input type="text"/>
 </body>
 </html>
