--- a/EJERCICIO 1/Ejercicio 1.html
+++ b/EJERCICIO 1/Ejercicio 1.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>El Bicho</title>
 </head>
 <body>
-    <img src="descarga.jpg" alt="Imagen de ejemplo" />
+    <h1> El BICHO </h1>
+          <img src="descarga.jpg" alt="Imagen de ejemplo" />
     <br>
     <input type="text">
 </body>
