--- a/EJERCICIO 1/Ejercicio 1.html
+++ b/EJERCICIO 1/Ejercicio 1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> El BICHO </h1>
-          <img src="descarga.jpg" alt="Imagen de ejemplo" />
+          <img src="/img/descarga.jpg" alt="Descripción" />
     <br>
     <input type="text">
 </body>
